--- a/latotale/contact.html
+++ b/latotale/contact.html
@@ -5,7 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
-        <title>Robot</title>
+        <title>Robot | Contact</title>
 
         <!-- CSS -->
 
@@ -52,9 +52,8 @@
         
     <!-- Header -->
 
-        <section id="header" class="main-header">
+        <section id="header" class="main-header contact-header inner-header">
             <div class="container">
-
                 <div class="row">
                     <nav class="navbar navbar-default">
                         <div class="navbar-header">
@@ -68,177 +67,134 @@
 
                         <div class="collapse navbar-collapse" id="site-nav-bar">
                             <ul class="nav navbar-nav">
-                                <li class="active"><a href="index.html">Home</a></li>
+                                <li><a href="index.html">Home</a></li>
                                 <li><a href="about.html">About</a></li>
                                 <li><a href="shop.html">Shop</a></li>
                                 <li><a href="faq.html">FAQ</a></li>
-                                <li><a href="contact.html">Contact</a></li>
+                                <li class="active"><a href="contact.html">Contact</a></li>
                             </ul>
                         </div><!-- /.navbar-collapse -->
                     </nav>
                 </div>
-                
+
                 <div class="intro row">
                     <div class="overlay"></div>
-                    <div class="col-sm-6 col-sm-offset-6">
-                        <h2 class="header-quote">Save time and lower</h2>
-                        <p>
-                            Your sweeping costs with the
-                        </p>
-                        <h1 class="header-title">Robot<br><span class="thin">Factory</span></h1>
+                    <div class="col-sm-12">
+                        <ol class="breadcrumb">
+                            <li><a href="index.html">Home</a></li>
+                            <li class="active">Contact</li>
+                        </ol>
                     </div>
                 </div> <!-- /.intro.row -->
             </div> <!-- /.container -->
             <div class="nutral"></div>
         </section> <!-- /#header -->
 
-    <!-- Product -->
-
-        <section id="product" class="product">
-            <div class="container section-bg">
+    <!-- Contact -->
+        <section class="contact">
+            <div class="container page-bgc">
                 <div class="row">
                     <div class="col-sm-12">
                         <div class="title-box">
-                            <h2 class="title">Welcom to our <span>Robot Factory</span></h2>
-                            <a href="#" class="btn btn-default btn-robot">view products</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-sm-4">
-                        <div class="porduct-box">
-                            <img class="img-responsive" src="assets/images/product-1.jpg" alt="product">
-                            <h3 class="product-title">Space robot</h3>
-                        </div>
-                    </div>
-                    <div class="col-sm-4">
-                        <div class="porduct-box">
-                            <img class="img-responsive" src="assets/images/product-2.jpg" alt="product">
-                            <h3 class="product-title">Sports robot</h3>
-                        </div>
-                    </div>
-                    <div class="col-sm-4">
-                        <div class="porduct-box">
-                            <img class="img-responsive" src="assets/images/product-3.jpg" alt="product">
-                            <h3 class="product-title">Toy for kids</h3>
-                        </div>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-sm-12">
-                        <div class="classic-title">
-                            <div class="stiker">
-                                <h3 class="inner-stiker">Why we are best</h3>
-                            </div>
-                            <h3 class="outer-stiker">We Received best factory award in the 1998</h3>
-                            <div class="incline-div"></div>
-                        </div>
-                    </div>
-                    <div class="boxed">
-                        <div class="col-sm-4">
-                            <p class="p-large">
-                                Sed lobortis volutpat imperdiet. faci.Fusce nec arcu ac neque tincidunt rutru tristique feugiat purus, id semper nisl tin vitae.Roin lobortis porta mattis. Mauris tincidunurus nec viverra mattis. Nunc convallis massa at eleifend blandit. Donec interdum.
-                            </p>
-                        </div>
-                        <div class="col-sm-4">
-                            <p>
-                                Ead lobortis volutpat imperdiet. Nulla faci.Fusce nec arcu ac neque tincidunt rutrum. Pro tristique feugiat purus, id semper nisl tincidunt vitae.Roin lobortis porta mattis. Mauris tincidunt purus nec viverra mattis. Nunc convallis massa at eleifend blandit. Donec interdum, sem lacinia dignissime varius, nulla eros consectetur mauris. 
-                            </p>
-                        </div>
-                        <div class="col-sm-4">
-                            <p>
-                                Sed lobortis volutpat imperdiet. Nulla faci.Fusce nec arcu ac neque tincidunt rutrum. Pro tristique feugiat purus, id semper nisl tincidunt vitae.Roin lobortis porta mattis. Mauris tincidunt purus nec viverra mattis. Nunc convallis massa at eleifend blandit. Donec interdum, sem lacinia dignissime varius, nulla eros consectetur mauris. 
-                            </p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
-
-    <!-- History -->
-        <section id="history" class="history">
-            <div class="container section-bg">
-                <div class="row">
-                    <div class="col-sm-12">
-                        <div class="title-box">
-                            <p>Since 1990</p>
-                            <h2 class="title mt0">Discover our history</h2>
+                            <p>Get in touch</p>
+                            <h2 class="title mt0">With us</h2>
                         </div>
                     </div>
                 </div>
                 <div class="row">
                     <div class="boxed">
-                        <div class="col-sm-10 col-sm-offset-1">
-                            <p>
-                                Lorem ipsum dolor sit amet consectetuer adipiscing elit sed diam nonummynibh euismod tincidunt ut laoree Dolore magna aliquam erat volutpat.Lorem ipsum dolor sit amet consectetuer adipiscing elit sed diam nonummynibh euismod tincidunt ut laoree Dolore magna aliquam erat .
-                            </p>
-                        </div>
                         <div class="col-sm-12">
-                            <img class="img-responsive" src="assets/images/history.png" alt="history">
+                            <p class="inner-p">
+                                Lorem ipsum dolor sit amet event landing template, consectetur adipisicing elit. Suscipit corrupti facilis event landing template, enim earum numquam minus veritatis nobis accusamus similique.
+                            </p>
                         </div>
                     </div>
                 </div>
-            </div>
-        </section>
-
-    <!-- Partner -->
-        <section id="partner" class="partner">
-            <div class="container section-bg">
                 <div class="row">
-                    <div class="col-sm-12">
-                        <div class="title-box">
-                            <p>Our media</p>
-                            <h2 class="title mt0">Partner</h2>
-                        </div>
+                    <div id="map" class="col-sm-12">
+                        <iframe class="map_canvas" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3106.278875347398!2d-77.05845558511638!3d38.87186095605503!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89b7b6df29ed2c27%3A0xaf83d0f8c013532f!2sThe+Pentagon!5e0!3m2!1sen!2sbd!4v1463572803138" frameborder="0" style="border:0" allowfullscreen></iframe>
                     </div>
                 </div>
                 <div class="row">
                     <div class="boxed">
-                       <div class="col-sm-12">
-                           <div id="partner-slider" class="owl-carousel">
-                                <div class="item">
-                                    <img src="assets/images/6.png" alt="partner">
+                        <div class="col-sm-8">
+                            <h4>Message for us</h4>
+                            <form action="contact.php" class="contact-form" id="contactForm" method="post">
+                                <div class="row">
+                                    <div class="col-sm-6">
+                                        <div class="form-group">
+                                            <input type="text" class="form-control" placeholder="First Name*" id="fname" name="fname" required>
+                                        </div> <!-- /.form-group -->
+                                    </div> <!-- /.col-sm-6 -->
+                                    <div class="col-sm-6">
+                                        <div class="form-group">
+                                            <input type="text" class="form-control" placeholder="Last Name" id="lname" name="lname">
+                                        </div> <!-- /.form-group -->
+                                    </div> <!-- /.col-sm-6 -->
+                                    <div class="col-sm-6">
+                                        <div class="form-group">
+                                            <input type="email" class="form-control" placeholder="Email*" id="email" name="email" required>
+                                        </div> <!-- /.form-group -->
+                                    </div> <!-- /.col-sm-6 -->
+                                     <div class="col-sm-6">
+                                        <div class="form-group">
+                                            <input type="text" class="form-control" placeholder="Phone Number" id="phone" name="phone">
+                                        </div> <!-- /.form-group -->
+                                    </div> <!-- /.col-sm-6 -->
+                                    <div class="col-sm-12">
+                                        <div class="form-group">
+                                            <textarea class="form-control" rows="6" placeholder="Write something..." name="message"></textarea>
+                                        </div> <!-- /.form-group -->
+                                    </div> <!-- /.col-sm-12 -->
+                                    <div class="text-center mt20 col-sm-12">
+                                        <button type="submit" class="btn btn-robot pull-left" id="cfsubmit">Send Message</button>
+                                    </div>
                                 </div>
-                                <div class="item">
-                                    <img src="assets/images/7.png" alt="partner">
+                            </form>
+                            <div id="contactFormResponse"></div>
+                        </div> <!-- /.col-sm-8 -->
+                        <div class="col-sm-4">
+                            <h4>Contact details</h4>
+                            <div class="row">
+                                <div class="col-xs-3">
+                                    <img class="imgresponsive" src="assets/images/address.png" alt="con">
                                 </div>
-                                <div class="item">
-                                    <img src="assets/images/8.png" alt="partner">
-                                </div>
-                                <div class="item">
-                                    <img src="assets/images/9.png" alt="partner">
-                                </div>
-                                <div class="item">
-                                    <img src="assets/images/6.png" alt="partner">
-                                </div>
-                                <div class="item">
-                                    <img src="assets/images/7.png" alt="partner">
-                                </div>
-                                <div class="item">
-                                    <img src="assets/images/8.png" alt="partner">
-                                </div>
-                                <div class="item">
-                                    <img src="assets/images/9.png" alt="partner">
-                                </div>
-                                <div class="item">
-                                    <img src="assets/images/6.png" alt="partner">
-                                </div>
-                                <div class="item">
-                                    <img src="assets/images/7.png" alt="partner">
-                                </div>
-                                <div class="item">
-                                    <img src="assets/images/8.png" alt="partner">
-                                </div>
-                                <div class="item">
-                                    <img src="assets/images/9.png" alt="partner">
+                                <div class="col-xs-9">
+                                    <h5>Address</h5>
+                                    <p class="contact-detail">
+                                        44 new design street, melbourne 005<br>
+                                        Australia 300
+                                    </p>
                                 </div>
                             </div>
-                       </div>
+                            <div class="row">
+                                <div class="col-xs-3">
+                                    <img class="imgresponsive" src="assets/images/phone.png" alt="con">
+                                </div>
+                                <div class="col-xs-9">
+                                    <h5>Phone</h5>
+                                    <p class="contact-detail">
+                                        01 (800) 433 744<br>
+                                        01 (800) 433 633
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-xs-3">
+                                    <img class="imgresponsive" src="assets/images/support.png" alt="con">
+                                </div>
+                                <div class="col-xs-9">
+                                    <h5>Support</h5>
+                                    <p class="contact-detail">
+                                        support@example.com
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
         </section>
-
 
     <!-- Footer -->
         <section id="footer-widget" class="footer-widget">
