--- a/latotale/faq.html
+++ b/latotale/faq.html
@@ -5,7 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
-        <title>Robot</title>
+        <title>Robot | FAQ</title>
 
         <!-- CSS -->
 
@@ -52,7 +52,7 @@
         
     <!-- Header -->
 
-        <section id="header" class="main-header">
+        <section id="header" class="main-header faq-header inner-header">
             <div class="container">
 
                 <div class="row">
@@ -68,10 +68,10 @@
 
                         <div class="collapse navbar-collapse" id="site-nav-bar">
                             <ul class="nav navbar-nav">
-                                <li class="active"><a href="index.html">Home</a></li>
+                                <li><a href="index.html">Home</a></li>
                                 <li><a href="about.html">About</a></li>
                                 <li><a href="shop.html">Shop</a></li>
-                                <li><a href="faq.html">FAQ</a></li>
+                                <li class="active"><a href="faq.html">FAQ</a></li>
                                 <li><a href="contact.html">Contact</a></li>
                             </ul>
                         </div><!-- /.navbar-collapse -->
@@ -80,165 +80,87 @@
                 
                 <div class="intro row">
                     <div class="overlay"></div>
-                    <div class="col-sm-6 col-sm-offset-6">
-                        <h2 class="header-quote">Save time and lower</h2>
-                        <p>
-                            Your sweeping costs with the
-                        </p>
-                        <h1 class="header-title">Robot<br><span class="thin">Factory</span></h1>
+                    <div class="col-sm-12">
+                        <ol class="breadcrumb">
+                            <li><a href="index.html">Home</a></li>
+                            <li class="active">FAQ</li>
+                        </ol>
                     </div>
                 </div> <!-- /.intro.row -->
             </div> <!-- /.container -->
             <div class="nutral"></div>
         </section> <!-- /#header -->
 
-    <!-- Product -->
-
-        <section id="product" class="product">
-            <div class="container section-bg">
+    <!-- FAQ -->
+        <section class="faq">
+            <div class="container page-bgc">
                 <div class="row">
                     <div class="col-sm-12">
                         <div class="title-box">
-                            <h2 class="title">Welcom to our <span>Robot Factory</span></h2>
-                            <a href="#" class="btn btn-default btn-robot">view products</a>
+                            <p>Frequently asked</p>
+                            <h2 class="title mt0">Questions</h2>
                         </div>
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-sm-4">
-                        <div class="porduct-box">
-                            <img class="img-responsive" src="assets/images/product-1.jpg" alt="product">
-                            <h3 class="product-title">Space robot</h3>
-                        </div>
-                    </div>
-                    <div class="col-sm-4">
-                        <div class="porduct-box">
-                            <img class="img-responsive" src="assets/images/product-2.jpg" alt="product">
-                            <h3 class="product-title">Sports robot</h3>
-                        </div>
-                    </div>
-                    <div class="col-sm-4">
-                        <div class="porduct-box">
-                            <img class="img-responsive" src="assets/images/product-3.jpg" alt="product">
-                            <h3 class="product-title">Toy for kids</h3>
-                        </div>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-sm-12">
-                        <div class="classic-title">
-                            <div class="stiker">
-                                <h3 class="inner-stiker">Why we are best</h3>
-                            </div>
-                            <h3 class="outer-stiker">We Received best factory award in the 1998</h3>
-                            <div class="incline-div"></div>
-                        </div>
-                    </div>
-                    <div class="boxed">
-                        <div class="col-sm-4">
-                            <p class="p-large">
-                                Sed lobortis volutpat imperdiet. faci.Fusce nec arcu ac neque tincidunt rutru tristique feugiat purus, id semper nisl tin vitae.Roin lobortis porta mattis. Mauris tincidunurus nec viverra mattis. Nunc convallis massa at eleifend blandit. Donec interdum.
-                            </p>
-                        </div>
-                        <div class="col-sm-4">
-                            <p>
-                                Ead lobortis volutpat imperdiet. Nulla faci.Fusce nec arcu ac neque tincidunt rutrum. Pro tristique feugiat purus, id semper nisl tincidunt vitae.Roin lobortis porta mattis. Mauris tincidunt purus nec viverra mattis. Nunc convallis massa at eleifend blandit. Donec interdum, sem lacinia dignissime varius, nulla eros consectetur mauris. 
-                            </p>
-                        </div>
-                        <div class="col-sm-4">
-                            <p>
-                                Sed lobortis volutpat imperdiet. Nulla faci.Fusce nec arcu ac neque tincidunt rutrum. Pro tristique feugiat purus, id semper nisl tincidunt vitae.Roin lobortis porta mattis. Mauris tincidunt purus nec viverra mattis. Nunc convallis massa at eleifend blandit. Donec interdum, sem lacinia dignissime varius, nulla eros consectetur mauris. 
-                            </p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
-
-    <!-- History -->
-        <section id="history" class="history">
-            <div class="container section-bg">
-                <div class="row">
-                    <div class="col-sm-12">
-                        <div class="title-box">
-                            <p>Since 1990</p>
-                            <h2 class="title mt0">Discover our history</h2>
-                        </div>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="boxed">
-                        <div class="col-sm-10 col-sm-offset-1">
-                            <p>
-                                Lorem ipsum dolor sit amet consectetuer adipiscing elit sed diam nonummynibh euismod tincidunt ut laoree Dolore magna aliquam erat volutpat.Lorem ipsum dolor sit amet consectetuer adipiscing elit sed diam nonummynibh euismod tincidunt ut laoree Dolore magna aliquam erat .
-                            </p>
-                        </div>
-                        <div class="col-sm-12">
-                            <img class="img-responsive" src="assets/images/history.png" alt="history">
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
-
-    <!-- Partner -->
-        <section id="partner" class="partner">
-            <div class="container section-bg">
-                <div class="row">
-                    <div class="col-sm-12">
-                        <div class="title-box">
-                            <p>Our media</p>
-                            <h2 class="title mt0">Partner</h2>
-                        </div>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="boxed">
-                       <div class="col-sm-12">
-                           <div id="partner-slider" class="owl-carousel">
-                                <div class="item">
-                                    <img src="assets/images/6.png" alt="partner">
+                    <div class="col-sm-8 col-sm-offset-2">
+                        <p class="inner-p">
+                            Lorem ipsum dolor sit amet event landing template, consectetur adipisicing elit. Suscipit corrupti facilis event landing template, enim earum numquam minus veritatis nobis accusamus similique, totam?
+                        </p>
+                        <div id="accordion" role="tablist" aria-multiselectable="true" class="panel-group">
+                            <div class="panel panel-default">
+                                <div id="headingOne" role="tab" class="panel-heading">
+                                    <h4 class="panel-title">
+                                        <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="false" aria-controls="collapseOne" class="collapsed">How do I become an author?</a>
+                                    </h4>
                                 </div>
-                                <div class="item">
-                                    <img src="assets/images/7.png" alt="partner">
-                                </div>
-                                <div class="item">
-                                    <img src="assets/images/8.png" alt="partner">
-                                </div>
-                                <div class="item">
-                                    <img src="assets/images/9.png" alt="partner">
-                                </div>
-                                <div class="item">
-                                    <img src="assets/images/6.png" alt="partner">
-                                </div>
-                                <div class="item">
-                                    <img src="assets/images/7.png" alt="partner">
-                                </div>
-                                <div class="item">
-                                    <img src="assets/images/8.png" alt="partner">
-                                </div>
-                                <div class="item">
-                                    <img src="assets/images/9.png" alt="partner">
-                                </div>
-                                <div class="item">
-                                    <img src="assets/images/6.png" alt="partner">
-                                </div>
-                                <div class="item">
-                                    <img src="assets/images/7.png" alt="partner">
-                                </div>
-                                <div class="item">
-                                    <img src="assets/images/8.png" alt="partner">
-                                </div>
-                                <div class="item">
-                                    <img src="assets/images/9.png" alt="partner">
+                                <div id="collapseOne" role="tabpanel" aria-labelledby="headingOne" class="panel-collapse collapse" aria-expanded="false" style="height: 0px;">
+                                    <div class="panel-body">
+                                        <p>Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon.</p>
+                                    </div>
                                 </div>
                             </div>
-                       </div>
+                            <div class="panel panel-default">
+                                <div id="headingTwo" role="tab" class="panel-heading">
+                                    <h4 class="panel-title">
+                                        <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="true" aria-controls="collapseTwo" class="">Helpful Resources for Authors &amp; for marketers</a>
+                                    </h4>
+                                </div>
+                                <div id="collapseTwo" role="tabpanel" aria-labelledby="headingTwo" class="panel-collapse collapse in" aria-expanded="true">
+                                    <div class="panel-body">
+                                        <p>Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et.</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="panel panel-default">
+                                <div id="headingThree" role="tab" class="panel-heading">
+                                    <h4 class="panel-title">
+                                        <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree" class="collapsed">How much money can I make?</a>
+                                    </h4>
+                                </div>
+                                <div id="collapseThree" role="tabpanel" aria-labelledby="headingThree" class="panel-collapse collapse" aria-expanded="false">
+                                    <div class="panel-body">
+                                        <p>Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et.</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="panel panel-default">
+                                <div id="headingFour" role="tab" class="panel-heading">
+                                    <h4 class="panel-title">
+                                        <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseFour" aria-expanded="false" aria-controls="collapseFour" class="collapsed">Can I offer my items for free on a promotional basis?</a>
+                                    </h4>
+                                </div>
+                                <div id="collapseFour" role="tabpanel" aria-labelledby="headingFour" class="panel-collapse collapse" aria-expanded="false">
+                                    <div class="panel-body">
+                                        <p>Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et.</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
         </section>
-
 
     <!-- Footer -->
         <section id="footer-widget" class="footer-widget">
