--- a/felindra/index.html
+++ b/felindra/index.html
@@ -6,13 +6,17 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>CGI</title>
+    <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css">
     <script src="js/jquery-3.4.1.min.js"></script>
     <script type="text/javascript" src="js/script.js"></script>
 </head>
 <body id="body" class="color">
-<div>
-    <button id="change_css">Changer CSS</button>
+<div class="container">
+    <div class="w-80">
+        <button href="./latotale/index.html">Retour vers le site de la nuit de l'info</button>
+        <button id="change_css">Changer CSS</button>
+    </div>
 </div>
 </body>
 </html>
