--- a/latotale/contact.html
+++ b/latotale/contact.html
@@ -36,20 +36,12 @@
                         <a href="index.html"><img src="assets/images/logo.png" alt="logo"></a>
                     </div>
                     <div class="col-sm-3 col-sm-offset-3 text-right">
-                        <span class="ion-android-cart"></span> 0 products
-                        <form>
-                            <div class="input-group">
-                                <input type="text" class="form-control" placeholder="">
-                                <span class="input-group-btn">
-                                    <button class="btn btn-default btn-robot" type="button">Search</button>
-                                </span>
-                            </div><!-- /input-group -->
-                        </form>
+                        <!-- TODO -->
                     </div>
                 </div>
             </div>
         </div>
-        
+
     <!-- Header -->
 
         <section id="header" class="main-header contact-header inner-header">
@@ -66,13 +58,13 @@
                         </div>
 
                         <div class="collapse navbar-collapse" id="site-nav-bar">
-                            <ul class="nav navbar-nav">
-                                <li><a href="index.html">Home</a></li>
-                                <li><a href="about.html">About</a></li>
-                                <li><a href="shop.html">Shop</a></li>
-                                <li><a href="faq.html">FAQ</a></li>
-                                <li class="active"><a href="contact.html">Contact</a></li>
-                            </ul>
+                          <ul class="nav navbar-nav">
+                            <li class="active"><a href="index.html">Accueil</a></li>
+                            <li><a href="liens.html">Liens utiles</a></li>
+                            <li><a href="encouragement.html">Encouragement</a></li>
+                            <li><a href="faq.html">FAQ</a></li>
+                            <li><a href="contact.html">Contact</a></li>
+                          </ul>
                         </div><!-- /.navbar-collapse -->
                     </nav>
                 </div>
