--- a/felindra/index.html
+++ b/felindra/index.html
@@ -17,6 +17,14 @@
         <button href="./latotale/index.html">Retour vers le site de la nuit de l'info</button>
         <button id="change_css">Changer CSS</button>
     </div>
+
+    <div class="">
+      <h2>Taille caractères : </h2>
+      <button class="resetMe">Remettre par défaut</button>
+      <button class="increase">Augmenter</button>
+      <button class="decrease">Diminuer</button>
+    </div>
+
 </div>
 </body>
 </html>
