--- a/latotale/faq.html
+++ b/latotale/faq.html
@@ -33,23 +33,15 @@
             <div class="container">
                 <div class="row">
                     <div class="col-sm-6">
-                        <a href="index.html"><img src="assets/images/logo.png" alt="logo"></a>
+                        <a href="index.html"><img src="assets/images/logo.png" class="img_radius" alt="logo"></a>
                     </div>
                     <div class="col-sm-3 col-sm-offset-3 text-right">
-                        <span class="ion-android-cart"></span> 0 products
-                        <form>
-                            <div class="input-group">
-                                <input type="text" class="form-control" placeholder="">
-                                <span class="input-group-btn">
-                                    <button class="btn btn-default btn-robot" type="button">Search</button>
-                                </span>
-                            </div><!-- /input-group -->
-                        </form>
+                        <img src="assets/images/jCloud.png" height="175" alt="logo">
                     </div>
                 </div>
             </div>
         </div>
-        
+
     <!-- Header -->
 
         <section id="header" class="main-header faq-header inner-header">
@@ -68,21 +60,19 @@
 
                         <div class="collapse navbar-collapse" id="site-nav-bar">
                             <ul class="nav navbar-nav">
-                                <li><a href="index.html">Home</a></li>
-                                <li><a href="about.html">About</a></li>
-                                <li><a href="shop.html">Shop</a></li>
-                                <li class="active"><a href="faq.html">FAQ</a></li>
-                                <li><a href="contact.html">Contact</a></li>
+                              <li class="active"><a href="index.html">Accueil</a></li>
+                              <li><a href="liens.html">Liens utiles</a></li>
+                              <li><a href="encouragement.html">Encouragement</a></li>
+                              <li><a href="faq.html">FAQ</a></li>
                             </ul>
                         </div><!-- /.navbar-collapse -->
                     </nav>
                 </div>
-                
+
                 <div class="intro row">
                     <div class="overlay"></div>
                     <div class="col-sm-12">
                         <ol class="breadcrumb">
-                            <li><a href="index.html">Home</a></li>
                             <li class="active">FAQ</li>
                         </ol>
                     </div>
