--- a/latotale/encouragement.html
+++ b/latotale/encouragement.html
@@ -33,10 +33,10 @@
             <div class="container">
                 <div class="row">
                     <div class="col-sm-6">
-                        <a href="index.html"><img src="assets/images/logo.png" alt="logo"></a>
+                        <a href="index.html"><img src="assets/images/logo.png" class="img_radius" alt="logo"></a>
                     </div>
                     <div class="col-sm-3 col-sm-offset-3 text-right">
-                        <!-- TODO -->
+                        <img src="assets/images/jCloud.png" height="175" alt="logo">
                     </div>
                 </div>
             </div>
@@ -64,7 +64,6 @@
                                 <li><a href="liens.html">Liens utiles</a></li>
                                 <li><a href="encouragement.html">Encouragement</a></li>
                                 <li><a href="faq.html">FAQ</a></li>
-                                <li><a href="contact.html">Contact</a></li>
                             </ul>
                         </div><!-- /.navbar-collapse -->
                     </nav>
@@ -231,61 +230,6 @@
             </div>
         </section>
 
-
-    <!-- Footer -->
-        <section id="footer-widget" class="footer-widget">
-            <div class="container header-bg">
-                <div class="row">
-                    <div class="col-sm-3">
-                        <h3>Our Popular Services</h3>
-                        <ul>
-                            <li><a href="#">Space Robot</a></li>
-                            <li><a href="#">Lego Robot</a></li>
-                            <li><a href="#">Toy for Robot</a></li>
-                            <li><a href="#">Industry Robot</a></li>
-                            <li><a href="#">Sports Robot</a></li>
-                        </ul>
-                    </div>
-                    <div class="col-sm-3">
-                        <h3>Important Link</h3>
-                        <ul>
-                            <li><a href="#">Lorem</a></li>
-                            <li><a href="#">Ipsum</a></li>
-                            <li><a href="#">Dolar</a></li>
-                            <li><a href="#">Set amet</a></li>
-                            <li><a href="#">Iodiet lorem</a></li>
-                        </ul>
-                    </div>
-                    <div class="col-sm-3">
-                        <h3>Our Latest Services</h3>
-                        <ul>
-                            <li><a href="#">Edu Robot</a></li>
-                            <li><a href="#">Low Robot</a></li>
-                            <li><a href="#">Mega Robot</a></li>
-                            <li><a href="#">Industry Robot</a></li>
-                            <li><a href="#">Sports Robot</a></li>
-                        </ul>
-                    </div>
-                    <div class="col-sm-3">
-                        <h3>Our Services</h3>
-                        <div class="widget-img-box">
-                            <a class="test-popup-link" href="assets/images/widget-big-1.png">
-                                <img class="widget-img" src="assets/images/widget-1.png" alt="widget">
-                            </a>
-                            <a class="test-popup-link" href="assets/images/widget-big-2.png">
-                                <img class="widget-img" src="assets/images/widget-2.png" alt="widget">
-                            </a>
-                            <a class="test-popup-link" href="assets/images/widget-big-3.png">
-                                <img class="widget-img" src="assets/images/widget-3.png" alt="widget">
-                            </a>
-                            <a class="test-popup-link" href="assets/images/widget-big-4.png">
-                                <img class="widget-img" src="assets/images/widget-4.png" alt="widget">
-                            </a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
         <footer class="footer text-center">
             <h3>&copy; Theme by <a href="https://themewagon.com/">Themewagon</a></h3>
         </footer>
