anim cle translate

--- a/felindra/index.html
+++ b/felindra/index.html
@@ -14,22 +14,25 @@
     <script type="text/javascript" src="js/script.js"></script>
 </head>
 <body id="body" class="colors">
-<div class="container">
+<div id="animation" class="w-80">
+    <img id="img" src="img/key.png" alt="" width="8%" height="7%">
+</div>
+<div id="content" class="container">
     <div class="w-80">
         <a class="btn bg-primary" href="../latotale/index.html">Retour vers le site de la nuit de l'info</a>
         <a class="btn bg-primary" id="change_css">Changer Mode</a>
     </div>
+
+    <div class="">
+        <h2>Taille caractères : </h2>
+        <button class="resetMe">Remettre par défaut</button>
+        <button class="increase">Augmenter</button>
+        <button class="decrease">Diminuer</button>
+    </div>
+
     <div id="footer" class="w-80 footerColor">
         <p>Page web réalisée dans le cadre de la nuit de l'informatique 2019</p>
     </div>
-
-    <div class="">
-      <h2>Taille caractères : </h2>
-      <button class="resetMe">Remettre par défaut</button>
-      <button class="increase">Augmenter</button>
-      <button class="decrease">Diminuer</button>
-    </div>
-
 </div>
 </body>
 </html>
