--- a/felindra/test.html
+++ b/felindra/test.html
@@ -12,7 +12,17 @@
 </head>
 <body id="body" class="color">
 <div>
-    
+
+
+<div id="B" class="test-b">
+  <div class="wrapper">
+    <div class="inner">
+      <img id="cley" src="img/cle.png" alt="" />
+    </div>
+  </div>
+</div>
+
+
 
 
     <p class="normal-font">TEST : the test of the year</p>
