Animation Cle fini !

--- a/felindra/index.html
+++ b/felindra/index.html
@@ -15,7 +15,7 @@
 </head>
 <body id="body" class="colors">
 <div id="animation" class="w-80">
-    <img id="img" src="img/key.png" alt="" width="8%" height="7%">
+    <img id="img" class="wrapper" src="img/key.png" alt="" width="8%" height="7%">
 </div>
 <div id="content" class="container">
     <div class="w-80">
