--- a/felindra/index.html
+++ b/felindra/index.html
@@ -30,6 +30,21 @@
         <button class="decrease">Diminuer</button>
     </div>
 
+    <div class="">
+      <select name="test" id="fonts" multiple>
+
+        <option>Arial</option>
+
+        <option>In one hour</option>
+
+        <option>In six hours</option>
+
+        <option>Tomorrow</option>
+
+      </select>
+    </div>
+
+
     <div id="footer" class="w-80 footerColor">
         <p>Page web réalisée dans le cadre de la nuit de l'informatique 2019</p>
     </div>
