font style weight family

--- a/felindra/index.html
+++ b/felindra/index.html
@@ -31,25 +31,33 @@
             <a class="btn bg-primary resetMe">Remettre par défaut</a>
             <a class="btn bg-primary increase">Augmenter</a>
             <a class="btn bg-primary decrease">Diminuer</a>
+
+            <p>Modifier texte : </p>
+            <button id="boldB" class="btn bg-primary">Gras</button>
+            <button id="italicB" class="btn bg-primary">Italic</button>
+
+            <br>
+
+            <select name="test" id="fonts" multiple>
+              <option>Arial</option>
+              <option>Times New Roman</option>
+              <option>Courier New</option>
+              <option>Verdana</option>
+              <option>Georgia</option>
+            </select>
         </div>
     </div>
 
     <div id="info">
-        
+
     </div>
 
     <div class="">
-      <select name="test" id="fonts" multiple>
 
-        <option>Arial</option>
+    </div>
 
-        <option>In one hour</option>
+    <div class="">
 
-        <option>In six hours</option>
-
-        <option>Tomorrow</option>
-
-      </select>
     </div>
 
 
