text add colors

--- a/felindra/index.html
+++ b/felindra/index.html
@@ -49,7 +49,9 @@
     </div>
 
     <div id="info">
-
+      <p>Fort Boyard, intitulé Les Clés de Fort Boyard lors de la première saison, est un jeu télévisé d'origine française, créé en 1990 par Jacques Antoine, Jean-Pierre Mitrecey et Pierre LaunaisNote.
+L'émission française et ses adaptations pour d'autres pays, produites par Adventure Line Productions, sont tournées dans le fort Boyard en Charente-Maritime.
+En France, elle est diffusée depuis le 7 juillet 1990 chaque été sur Antenne 2, puis France 2, et est considérée comme l'une des émissions phares de la période estivale.</p>
     </div>
 
     <div class="">
