end big part + add konamicode

--- a/latotale/faq.html
+++ b/latotale/faq.html
@@ -87,62 +87,50 @@
                 <div class="row">
                     <div class="col-sm-12">
                         <div class="title-box">
-                            <p>Frequently asked</p>
-                            <h2 class="title mt0">Questions</h2>
+                            <h2 class="title mt0">Questions fréquentes</h2>
                         </div>
                     </div>
                 </div>
                 <div class="row">
                     <div class="col-sm-8 col-sm-offset-2">
                         <p class="inner-p">
-                            Lorem ipsum dolor sit amet event landing template, consectetur adipisicing elit. Suscipit corrupti facilis event landing template, enim earum numquam minus veritatis nobis accusamus similique, totam?
+                            Pour plus d'information accédez directement à <a href="https://www.etudiant.gouv.fr">etudiant.gouv.fr</a> ou référez vous à <a href="https://www.service-public.fr/particuliers/vosdroits/F32456">ces informations</a>.
                         </p>
                         <div id="accordion" role="tablist" aria-multiselectable="true" class="panel-group">
                             <div class="panel panel-default">
                                 <div id="headingOne" role="tab" class="panel-heading">
                                     <h4 class="panel-title">
-                                        <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="false" aria-controls="collapseOne" class="collapsed">How do I become an author?</a>
+                                        <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="false" aria-controls="collapseOne" class="collapsed">Comment déposer une demande de bourse ?</a>
                                     </h4>
                                 </div>
                                 <div id="collapseOne" role="tabpanel" aria-labelledby="headingOne" class="panel-collapse collapse" aria-expanded="false" style="height: 0px;">
                                     <div class="panel-body">
-                                        <p>Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon.</p>
+                                        <p>
+                                        Vous devez d'abord avoir un compte MesServices.etudiant.gouv.fr et vous identifier. Une fois identifié sur votre espace MesServices.etudiant.gouv.fr, vous devez cliquer sur l'icône "DEMANDE DSE".<a href="https://www.etudiant.gouv.fr">En savoir plus</a>
+                                        </p>
                                     </div>
                                 </div>
                             </div>
                             <div class="panel panel-default">
                                 <div id="headingTwo" role="tab" class="panel-heading">
                                     <h4 class="panel-title">
-                                        <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="true" aria-controls="collapseTwo" class="">Helpful Resources for Authors &amp; for marketers</a>
+                                        <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="true" aria-controls="collapseTwo" class="">Conserve-t-on sa bourse en cas d’échec scolaire ?</a>
                                     </h4>
                                 </div>
                                 <div id="collapseTwo" role="tabpanel" aria-labelledby="headingTwo" class="panel-collapse collapse in" aria-expanded="true">
                                     <div class="panel-body">
-                                        <p>Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et.</p>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="panel panel-default">
-                                <div id="headingThree" role="tab" class="panel-heading">
-                                    <h4 class="panel-title">
-                                        <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree" class="collapsed">How much money can I make?</a>
-                                    </h4>
-                                </div>
-                                <div id="collapseThree" role="tabpanel" aria-labelledby="headingThree" class="panel-collapse collapse" aria-expanded="false">
-                                    <div class="panel-body">
-                                        <p>Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et.</p>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="panel panel-default">
-                                <div id="headingFour" role="tab" class="panel-heading">
-                                    <h4 class="panel-title">
-                                        <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseFour" aria-expanded="false" aria-controls="collapseFour" class="collapsed">Can I offer my items for free on a promotional basis?</a>
-                                    </h4>
-                                </div>
-                                <div id="collapseFour" role="tabpanel" aria-labelledby="headingFour" class="panel-collapse collapse" aria-expanded="false">
-                                    <div class="panel-body">
-                                        <p>Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et.</p>
+                                        <p>
+                                        Tout dépend du nombre d'échecs et du niveau atteint. Car, au cours de ses études supérieures, un étudiant peut utiliser 7 droits à bourse : 5 au maximum pour sa licence, et 2 ou 3 pour son master (selon qu’il a utilisé 5 droits ou moins pour sa licence).
+
+                                        La règle est la suivante :
+
+                                          <li>- aucun contrôle de crédits pour les deux premiers droits ;</li>
+
+                                          <li>- le troisième droit n’est accordé que si l’étudiant a validé au moins 60 crédits, 2 semestres ou 1 année ;</li>
+
+                                          <li>- le quatrième ou le cinquième droit n'est accordé que si l’étudiant a validé au moins 120 crédits, 4 semestres ou 2 années ;</li>
+
+                                          <li>- le sixième droit n’est accordé que si l’étudiant a validé au moins 180 crédits, 6 semestres ou 3 années.</li></p>
                                     </div>
                                 </div>
                             </div>
@@ -216,6 +204,8 @@
         <script src="assets/js/jquery.magnific-popup.min.js"></script>
         <script src="assets/js/owl.carousel.min.js"></script>
         <script src="assets/js/script.js"></script>
+        <script src="assets/js/konami.js"></script>
+
 
     </body>
 </html>
