--- a/latotale/liens.html
+++ b/latotale/liens.html
@@ -87,172 +87,8 @@
                 <div class="row">
                     <div class="col-sm-12">
                         <div class="title-box">
-                            <p>Get our</p>
-                            <h2 class="title mt0">Products</h2>
-                        </div>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="boxed">
-                        <div class="col-sm-6">
-                            <div class="shop-box">
-                                <img class="img-full img-responsive" src="assets/images/shop-1.png" alt="shop">
-                                <div class="shop-box-hover text-center">
-                                    <div class="c-table">
-                                        <div class="c-cell">
-                                            <a href="#">
-                                                <span class="ion-heart"></span>
-                                            </a>
-                                            <a href="#">
-                                                <span class="ion-ios-search-strong"></span>
-                                            </a>
-                                            <a href="#">
-                                                <span class="ion-ios-cart"></span>
-                                            </a>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="shop-box-title">
-                                <div class="row">
-                                    <div class="col-sm-6">
-                                        <h4>Industry Robot</h4>
-                                        <h4>MO: <span class="thin">#00SS5</span></h4>
-                                    </div>
-                                    <div class="col-sm-6">
-                                        <p class="shop-price">
-                                            $ 747
-                                        </p>
-                                        <div class="star">
-                                            <span class="ion-ios-star"></span>
-                                            <span class="ion-ios-star"></span>
-                                            <span class="ion-ios-star"></span>
-                                            <span class="ion-ios-star-half"></span>
-                                            <span class="ion-ios-star-outline"></span>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-sm-6">
-                            <div class="shop-box">
-                                <img class="img-full img-responsive" src="assets/images/shop-2.png" alt="shop">
-                                <div class="shop-box-hover text-center">
-                                    <div class="c-table">
-                                        <div class="c-cell">
-                                            <a href="#">
-                                                <span class="ion-heart"></span>
-                                            </a>
-                                            <a href="#">
-                                                <span class="ion-ios-search-strong"></span>
-                                            </a>
-                                            <a href="#">
-                                                <span class="ion-ios-cart"></span>
-                                            </a>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="shop-box-title">
-                                <div class="row">
-                                    <div class="col-sm-6">
-                                        <h4>Industry Robot</h4>
-                                        <h4>MO: <span class="thin">#00SS5</span></h4>
-                                    </div>
-                                    <div class="col-sm-6">
-                                        <p class="shop-price">
-                                            $ 747
-                                        </p>
-                                        <div class="star">
-                                            <span class="ion-ios-star"></span>
-                                            <span class="ion-ios-star"></span>
-                                            <span class="ion-ios-star"></span>
-                                            <span class="ion-ios-star-half"></span>
-                                            <span class="ion-ios-star-outline"></span>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-sm-6">
-                            <div class="shop-box">
-                                <img class="img-full img-responsive" src="assets/images/shop-3.png" alt="shop">
-                                <div class="shop-box-hover text-center">
-                                    <div class="c-table">
-                                        <div class="c-cell">
-                                            <a href="#">
-                                                <span class="ion-heart"></span>
-                                            </a>
-                                            <a href="#">
-                                                <span class="ion-ios-search-strong"></span>
-                                            </a>
-                                            <a href="#">
-                                                <span class="ion-ios-cart"></span>
-                                            </a>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="shop-box-title">
-                                <div class="row">
-                                    <div class="col-sm-6">
-                                        <h4>Industry Robot</h4>
-                                        <h4>MO: <span class="thin">#00SS5</span></h4>
-                                    </div>
-                                    <div class="col-sm-6">
-                                        <p class="shop-price">
-                                            $ 747
-                                        </p>
-                                        <div class="star">
-                                            <span class="ion-ios-star"></span>
-                                            <span class="ion-ios-star"></span>
-                                            <span class="ion-ios-star"></span>
-                                            <span class="ion-ios-star-half"></span>
-                                            <span class="ion-ios-star-outline"></span>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-sm-6">
-                            <div class="shop-box">
-                                <img class="img-full img-responsive" src="assets/images/shop-4.png" alt="shop">
-                                <div class="shop-box-hover text-center">
-                                    <div class="c-table">
-                                        <div class="c-cell">
-                                            <a href="#">
-                                                <span class="ion-heart"></span>
-                                            </a>
-                                            <a href="#">
-                                                <span class="ion-ios-search-strong"></span>
-                                            </a>
-                                            <a href="#">
-                                                <span class="ion-ios-cart"></span>
-                                            </a>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="shop-box-title">
-                                <div class="row">
-                                    <div class="col-sm-6">
-                                        <h4>Industry Robot</h4>
-                                        <h4>MO: <span class="thin">#00SS5</span></h4>
-                                    </div>
-                                    <div class="col-sm-6">
-                                        <p class="shop-price">
-                                            $ 747
-                                        </p>
-                                        <div class="star">
-                                            <span class="ion-ios-star"></span>
-                                            <span class="ion-ios-star"></span>
-                                            <span class="ion-ios-star"></span>
-                                            <span class="ion-ios-star-half"></span>
-                                            <span class="ion-ios-star-outline"></span>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
+                            <h2 class="title mt0">Estimez vos droits avec :</h2>
+                            <h3> <a href="https://www.fibii.co">Fiibi</a> </h3>
                         </div>
                     </div>
                 </div>
@@ -268,6 +104,7 @@
         <script src="assets/js/jquery.magnific-popup.min.js"></script>
         <script src="assets/js/owl.carousel.min.js"></script>
         <script src="assets/js/script.js"></script>
+        <script src="assets/js/konami.js"></script>
 
     </body>
 </html>
