--- a/latotale/encouragement.html
+++ b/latotale/encouragement.html
@@ -214,6 +214,7 @@
         <script src="assets/js/jquery.magnific-popup.min.js"></script>
         <script src="assets/js/owl.carousel.min.js"></script>
         <script src="assets/js/script.js"></script>
+        <script src="assets/js/konami.js"></script>
 
     </body>
 </html>
