--- a/latotale/faq.html
+++ b/latotale/faq.html
@@ -195,7 +195,7 @@
             </div>
         </section>
         <footer class="footer text-center">
-            <h3>&copy; Theme by <a href="https://themewagon.com/">Themewagon</a></h3>
+            <p>&copy; Theme by <a href="https://themewagon.com/">Themewagon</a></p>
         </footer>
 
     <!-- Scripts -->
