--- a/latotale/encouragement.html
+++ b/latotale/encouragement.html
@@ -205,7 +205,7 @@
         </section>
 
         <footer class="footer text-center">
-            <h3>&copy; Theme by <a href="https://themewagon.com/">Themewagon</a></h3>
+            <p>&copy; Theme by <a href="https://themewagon.com/">Themewagon</a></p>
         </footer>
 
     <!-- Scripts -->
