--- a/felindra/index.html
+++ b/felindra/index.html
@@ -24,7 +24,7 @@
 
     <div id="options" class="w-80">
         <a class="btn bg-primary" href="../latotale/index.html">Retour vers le site de la nuit de l'info</a>
-        <a class="btn bg-primary" id="change_css">Changer Mode</a>
+        <a class="btn bg-primary" id="change_css">Changer mode</a>
         <img id="paramImg" src="img/param.png" alt="" width="5%" height="5%">
         <div id="parameters">
             <p>Taille caractères : </p>
@@ -39,32 +39,45 @@
             <br>
 
             <select name="test" id="fonts" multiple>
-              <option>Arial</option>
-              <option>Times New Roman</option>
-              <option>Courier New</option>
-              <option>Verdana</option>
-              <option>Georgia</option>
+                <option>Arial</option>
+                <option>Times New Roman</option>
+                <option>Courier New</option>
+                <option>Verdana</option>
+                <option>Georgia</option>
             </select>
         </div>
     </div>
 
-    <div id="info">
-      <p>Fort Boyard, intitulé Les Clés de Fort Boyard lors de la première saison, est un jeu télévisé d'origine française, créé en 1990 par Jacques Antoine, Jean-Pierre Mitrecey et Pierre LaunaisNote.
-L'émission française et ses adaptations pour d'autres pays, produites par Adventure Line Productions, sont tournées dans le fort Boyard en Charente-Maritime.
-En France, elle est diffusée depuis le 7 juillet 1990 chaque été sur Antenne 2, puis France 2, et est considérée comme l'une des émissions phares de la période estivale.</p>
+    <div class="info">
+        <p>Fort Boyard, intitulé Les Clés de Fort Boyard lors de la première saison, est un jeu télévisé d'origine
+            française, créé en 1990 par Jacques Antoine, Jean-Pierre Mitrecey et Pierre LaunaisNote.
+            L'émission française et ses adaptations pour d'autres pays, produites par Adventure Line Productions, sont
+            tournées dans le fort Boyard en Charente-Maritime.
+            En France, elle est diffusée depuis le 7 juillet 1990 chaque été sur Antenne 2, puis France 2, et est
+            considérée comme l'une des émissions phares de la période estivale.</p>
     </div>
 
-    <div class="">
-
+    <div class="w-80 text-center info">
+        <div>
+            <p>Le Fort</p>
+            <img id="fort" src="img/fort.png" alt="" width="15%" height="15%">
+        </div>
+        <br>
+        <div>
+            <p>Deux icones de Ford Boyard</p>
+            <p>Le père Fouras</p>
+            <img id="fouras" src="img/fouras.jpg" alt="" width="20%" height="20%">
+        </div>
+        <br>
+        <div>
+            <p>Passe-Partout</p>
+            <img id="passep" src="img/passe-partout.jpg" alt="" width="20%" height="20%">
+        </div>
     </div>
-
-    <div class="">
-
-    </div>
-
 
     <div id="footer" class="w-80 footerColor">
         <p>Page web réalisée dans le cadre de la nuit de l'informatique 2019</p>
+        <p>The BFG Division</p>
     </div>
 </div>
 </body>
