--- a/latotale/index.html
+++ b/latotale/index.html
@@ -62,6 +62,7 @@
                         <div class="collapse navbar-collapse" id="site-nav-bar">
                           <ul class="nav navbar-nav">
                             <li class="active"><a href="index.html">Accueil</a></li>
+                            <li><a href="../felindra/index.html">Défis CGI</a></li>
                             <li><a href="liens.html">Liens utiles</a></li>
                             <li><a href="encouragement.html">Encouragement</a></li>
                             <li><a href="faq.html">FAQ</a></li>
