--- a/latotale/encouragement.html
+++ b/latotale/encouragement.html
@@ -61,6 +61,7 @@
                         <div class="collapse navbar-collapse" id="site-nav-bar">
                             <ul class="nav navbar-nav">
                                 <li class="active"><a href="index.html">Accueil</a></li>
+                                <li><a href="../felindra/index.html">Défis CGI</a></li>
                                 <li><a href="liens.html">Liens utiles</a></li>
                                 <li><a href="encouragement.html">Encouragement</a></li>
                                 <li><a href="faq.html">FAQ</a></li>
@@ -105,29 +106,8 @@
                 </div>
                 <div class="row">
                     <div class="col-sm-12">
-                        <div class="classic-title">
-                            <div class="stiker">
-                                <h3 class="inner-stiker">Why we are best</h3>
-                            </div>
-                            <h3 class="outer-stiker">We Received best factory award in the 1998</h3>
-                            <div class="incline-div"></div>
-                        </div>
-                    </div>
-                    <div class="boxed">
-                        <div class="col-sm-4">
-                            <p class="p-large">
-                                Sed lobortis volutpat imperdiet. faci.Fusce nec arcu ac neque tincidunt rutru tristique feugiat purus, id semper nisl tin vitae.Roin lobortis porta mattis. Mauris tincidunurus nec viverra mattis. Nunc convallis massa at eleifend blandit. Donec interdum.
-                            </p>
-                        </div>
-                        <div class="col-sm-4">
-                            <p>
-                                Ead lobortis volutpat imperdiet. Nulla faci.Fusce nec arcu ac neque tincidunt rutrum. Pro tristique feugiat purus, id semper nisl tincidunt vitae.Roin lobortis porta mattis. Mauris tincidunt purus nec viverra mattis. Nunc convallis massa at eleifend blandit. Donec interdum, sem lacinia dignissime varius, nulla eros consectetur mauris.
-                            </p>
-                        </div>
-                        <div class="col-sm-4">
-                            <p>
-                                Sed lobortis volutpat imperdiet. Nulla faci.Fusce nec arcu ac neque tincidunt rutrum. Pro tristique feugiat purus, id semper nisl tincidunt vitae.Roin lobortis porta mattis. Mauris tincidunt purus nec viverra mattis. Nunc convallis massa at eleifend blandit. Donec interdum, sem lacinia dignissime varius, nulla eros consectetur mauris.
-                            </p>
+                        <div class="title-box">
+                            <h2 class="title">La combinaison magique :<span> Haut, haut, bas, bas, gauche, droite, gauche, droite, B, A</span></h2>
                         </div>
                     </div>
                 </div>
