--- a/latotale/liens.html
+++ b/latotale/liens.html
@@ -61,6 +61,7 @@
                         <div class="collapse navbar-collapse" id="site-nav-bar">
                           <ul class="nav navbar-nav">
                             <li class="active"><a href="index.html">Accueil</a></li>
+                            <li><a href="../felindra/index.html">Défis CGI</a></li>
                             <li><a href="liens.html">Liens utiles</a></li>
                             <li><a href="encouragement.html">Encouragement</a></li>
                             <li><a href="faq.html">FAQ</a></li>
@@ -89,6 +90,14 @@
                         <div class="title-box">
                             <h2 class="title mt0">Estimez vos droits avec :</h2>
                             <h3> <a href="https://www.fibii.co">Fiibi</a> </h3>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-sm-12">
+                        <div class="title-box">
+                            <h2 class="title mt0">Accédez aux services santé :</h2>
+                            <h3> <a href="https://www.u-bordeaux.fr/Campus/Espace-sante-etudiants">Espace Santé Etudiants</a> </h3>
                         </div>
                     </div>
                 </div>
